--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,10 @@
     "es6": true
   },
   "extends": [
-    "prettier",
-    "plugin:prettier/recommended",
     "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -22,7 +22,27 @@
     "sourceType": "module"
   },
   "plugins": ["react", "prettier"],
-  "rules": { "prettier/prettier": "error" },
+  "rules": {
+    "prettier/prettier": "error",
+    "react/no-multi-comp": "warn",
+    "react/jsx-filename-extension": "error",
+    "react/jsx-pascal-case": 1,
+    "react/forbid-prop-types": [
+      1,
+      { "checkContextTypes": true, "checkChildContextTypes": true }
+    ],
+    "react/prefer-es6-class": 1,
+    "react/prefer-stateless-function": 1,
+    "jsx-quotes": ["error", "prefer-double"],
+    "react/jsx-boolean-value": 1,
+    "react/no-array-index-key": 2,
+    "react/no-string-refs": 1,
+    "react/jsx-wrap-multilines": 1,
+    "react/self-closing-comp": 1,
+    "react/jsx-no-bind": 2,
+    "react/require-render-return": 1,
+    "react/sort-comp": 1
+  },
   "settings": {
     "react": {
       "createClass": "createReactClass", // Regex for Component Factory to use,
