--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lodash.shuffle": "^4.2.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
